# chatbot-booking

./: README.md  pyproject.toml
chatbot_booking_backend/: main.py
data/: bookings.csv
src/: tools.py  utils.py
src/config/: chain.py  llm.py  memory.py  prompt.py
src/schema/: __init__.py  booking.py
