[tool.poetry]
name = "chatbot-booking-backend"
version = "0.1.0"
description = ""
authors = ["Michael Eco <michael.gunawan2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
main = "chatbot_booking_backend.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"