[tool.poetry]
name = "chatbot-booking-backend"
version = "0.1.0"
description = ""
authors = ["Michael Eco <michael.gunawan2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-core = "^0.3.13"
langchain-community = "^0.3.3"
langchain-ollama = "^0.2.0"
networkx = "^3.4.2"
pydantic = "^2.9.2"
streamlit = "^1.39.0"
pandas = "^2.2.3"

[tool.poetry.scripts]
main = "chatbot_booking_backend.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"